# bmed8813rob-sp21-team1

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  SETUP-WINDOWS.md  pyproject.toml  requirements.txt  setup.py  test_bedpanenv.ipynb
configs/: bedpan.json  bedpan_v2.json  bedpan_v3.json  default_config.json
notebooks/: test_bedpanenv.ipynb
riddbot/: gym.py
riddbot/agents/: bedpan.py  disposal.py  water.py
riddbot/env/: bedpan_env.py  observe.py  rewards.py  setup.py
riddbot/model_zoo/: .gitignore
